Enabling Other field textbox visiblility when javascript is disabled
"Other" field textbox will be visible now as "Job Role" option when
JavaScript is disabled

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
           <option value="designer">Designer</option>          
           <option value="student">Student</option>
           <option value="other">Other</option>  
-        </select>           
+        </select>
+
+        <input id="other-title" type="text" placeholder="Your Job Role">
+
       </fieldset>
       
       <fieldset class="shirt">
